@@ -1,7 +1,8 @@
 Revision history for Net-Amazon-Signature-v4
 0.20
 		- Don't double-escape URI segments for S3 (RT#128728, GH#7)
-		- Allow passing parameters to new() in a hashref
+		- Allow passing attributes to new() in a hashref
+		- security_token attribute can be specified to apply to each signed request (GH#8)
 
 0.19	2018-08-24
 		- Fix error in signature if a URI path component is 0 (GH#4)
